# USTC-DGP

./: CMakeLists.txt  README.md  build_all.bat
Homework/hw1/: meshCurvature.json  requirments.md
Homework/hw2/: pointsCurvature.json  requirments.md  torus.xyz
Homework/hw3/: meshARAPpara.json  requirments.md
NodeSystem/: CUSTOM_NODES_GUIDE.md  graph_execution_state.h  graph_executor.cpp  graph_executor.h  graph_model.cpp  graph_model.h  graph_patch_applier.cpp  graph_patch_applier.h  graph_runtime.cpp  graph_runtime.h  graph_types.h  node_schema.h  node_signature.cpp  node_signature.h  node_system_registration.h  output_transport.cpp  output_transport.h  patch_semantics.cpp  patch_semantics.h  processor.cpp  processor_graph.h  processor_tests.cpp
NodeSystem/Geometry/include/: node_ARAPpara.h  node_geometry.h  node_laplacian.h  node_lines.h  node_mesh.h  node_pointCurvature.h  node_points.h  node_scalarCurvature.h  node_texture.h
NodeSystem/Geometry/src/: node_ARAPpara.cpp  node_geometry.cpp  node_laplacian.cpp  node_lines.cpp  node_mesh.cpp  node_pointCurvature.cpp  node_points.cpp  node_scalarCurvature.cpp  node_texture.cpp
NodeSystem/Utils/include/: node_base.h  node_interaction.h  node_list.h  node_matrix.h  node_string.h  node_value.h  node_vector.h
NodeSystem/Utils/src/: node_base.cpp  node_interaction.cpp  node_list.cpp  node_matrix.cpp  node_string.cpp  node_value.cpp  node_vector.cpp
Server/: graph_execution_rules.js  output_transport.js  package-lock.json  package.json  server.js  start.sh
Server/tests/: interaction_commit_regression.js
WebUI/: index.html  main.js  script.js  style.css
WebUI/core/: comment_box.js  connection.js  dynamic_socket_controls.js  editor.js  execution_request_builder.js  execution_result_applier.js  execution_session_client.js  graph_change_execution.js  graph_execution_rules.js  history.js  interaction.js  node.js  node_group.js  node_operation_updates.js  node_preview_contracts.js  output_transport.js  patch_queue.js  preview_output_state.js  preview_refresh_scheduler.js  preview_target_router.js  queued_execution_options.js  renderer.js
WebUI/ui/: colorbar.js  context_menu.js  editable_help_panel.js  help_panel.js  mesh_viewer_aux_lods.js  mesh_viewer_colorbar_gl.js  mesh_viewer_display_state.js  mesh_viewer_edit_ui.js  mesh_viewer_editing.js  mesh_viewer_geometry.js  mesh_viewer_geometry_updates.js  mesh_viewer_handle_builders.js  mesh_viewer_handle_resources.js  mesh_viewer_handles.js  mesh_viewer_lines.js  mesh_viewer_lod.js  mesh_viewer_math.js  mesh_viewer_module_contracts.js  mesh_viewer_object_ui.js  mesh_viewer_panel.js  mesh_viewer_prewarm.js  mesh_viewer_program.js  mesh_viewer_rendering.js  mesh_viewer_runtime.js  mesh_viewer_selection_render.js  mesh_viewer_shell.js  mesh_viewer_streaming.js  mesh_viewer_textures.js  mesh_viewer_windowing.js  preview_panel.js  preview_windowing.js  search_menu.js  template_library_panel.js
docs/: frontend_geometry_viewer_contract.md  frontend_preview_contract.md  preview_audit_checklist.md
json/: README.md
json/config/: interaction_schema.json  shortcuts.json
json/examples/: example_graph.json  test_graph.json  test_output.json  test_vector.json  test_vector_output.json
json/runtime/: graph_input.json  tmp_geometry_graph.json  tmp_geometry_out.json
json/tests/: matrix_fail.json  matrix_fail_out.json  matrix_math_add.json  matrix_math_add_out.json  matrix_ok.json  matrix_ok_out.json  test_interaction_connection.json  test_interaction_output.json  test_interaction_with_event.json  test_interaction_with_event_output.json
scripts/: new_node.ps1  server_output_page_selftest.mjs  test_preview_pipeline.mjs  webui_execution_selftest.mjs
